Trim diagnostics to what is still open
Remove probes whose answers are known and documented: vehicle signals,
shutdown broadcasts, encoder/decoder capability, floating positions, the
property snapshot tool and the car permissions they needed. Drop routine
black box counters, list each process exit once, and log service starts
only on sticky restarts. The report's recent log and stall snapshots filter
container and codec chatter, so they cover minutes instead of seconds.
Periodic fps and frame-count logs go to once a minute or away.
Release 1.37.0-alpha.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>